--- a/app/views/micotters/index.html.erb
+++ b/app/views/micotters/index.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: Micotter.new, local: true) do |form| %>
+<%= form_with(model: @micotter.new, local: true) do |form| %>
     <div class="micotter_content">
       <%= form.label :content %>
       <%= form.text_field :content %>
