--- a/app/views/micotters/index.html.erb
+++ b/app/views/micotters/index.html.erb
@@ -1,7 +1,2 @@
-<%= form_with(model: @micotter.new, local: true) do |form| %>
-    <div class="micotter_content">
-      <%= form.label :content %>
-      <%= form.text_field :content %>
-    </div>
-    <%= form.submit %>
-  <% end %>
+<h1>Micotters#index</h1>
+<p>Find me in app/views/micotters/index.html.erb</p>
