--- a/app/views/micotters/index.html.erb
+++ b/app/views/micotters/index.html.erb
@@ -7,6 +7,7 @@
   <tr>
     <td><%= micotter.content %></td>
     <td><%= link_to '詳細を確認する', micotter_path(micotter.id) %></td>
+    <td><%= link_to "ミコートを編集する", edit_micotter_path(micotter.id) %></td>
   </tr>
 <% end %>
 </table>
