--- a/app/views/micotters/new.html.erb
+++ b/app/views/micotters/new.html.erb
@@ -1,17 +1,2 @@
-<%= form_with(model: Micotter.new) do |form| %>
-  <% if @micotter.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= @micotter.errors.count %>件のエラーがあります。</h2>
-      <ul>
-      <% @micotter.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-  <div class="micotter_content">
-    <%= form.label :content %>
-    <%= form.text_field :content %>
-  </div>
-  <%= form.submit %>
-<% end %>
+<h2>ミコートを作成する</h2>
+<%= render 'form' %>
