--- a/app/views/micotters/index.html.erb
+++ b/app/views/micotters/index.html.erb
@@ -7,11 +7,11 @@
 <% @micotters.each do |micotter| %>
   <tr>
     <td><%= micotter.content %></td>
-    <td><%= link_to '詳細を確認する', micotter_path(micotter.id) %></td>
-    <td><%= link_to "ミコートを編集する", edit_micotter_path(micotter.id) %></td>
-    <td><%= link_to 'ミコートを削除する', micotter_path(micotter.id), method: :delete ,data: { confirm: '本当に削除していいですか？' } %></td>
+    <td><%= link_to '詳細', micotter_path(micotter.id) %></td>
+    <td><%= link_to '編集', edit_micotter_path(micotter.id) %></td>
+    <td><%= link_to '削除', micotter_path(micotter.id), method: :delete ,data: { confirm: '本当に削除していいですか？' } %></td>
   </tr>
 <% end %>
 </table>
 <br>
-<%= link_to '新しくミコートを投稿する', new_micotter_path %>
+<%= link_to 'ミコートする', new_micotter_path %>
