--- a/app/assets/stylesheets/micotters.scss
+++ b/app/assets/stylesheets/micotters.scss
@@ -1,3 +1,7 @@
-// Place all the styles related to the micotters controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+header {
+  background-color: rgb(0, 255, 255);
+}
+
+footer {
+  background-color: rgb(0, 255, 255);
+}
